Fixed navbar misalignment at sm-ms size

--- a/assets/less/site/layout-standard.less
+++ b/assets/less/site/layout-standard.less
@@ -157,7 +157,7 @@ body {
 
 #nav-main {
 
-	ul {
+	.nav {
 		.clearfix;
 		padding: @padding-small-vertical (@grid-gutter-width/2);
 		margin: auto;
@@ -186,8 +186,8 @@ body {
 			}
 
 			a[title="Twitter"] {
-				background: url("../img/twitter-xxl.png") no-repeat 13px 16px;
-				text-indent: 25px;
+				background: url("../img/twitter-xxl.png") no-repeat 12px 16px;
+				text-indent: 25em;
 				width: 40px;
 				overflow: hidden;
 			}
@@ -330,16 +330,16 @@ body.admin-bar >.container #masthead #branding .branding-parent { top: 39px; }
 
  		#nav-main {
 
- 			ul {
+ 			.nav {
  				.clearfix;
  				padding: 0 (@grid-gutter-width/2);
  			}
 
- 			& ul#nav-menu { 
+ 			& #nav-menu { 
  				.pull-left;
  			}
 
- 			& ul#nav-actions { 
+ 			& #nav-actions { 
  				.pull-right;
  			}
  		}
@@ -357,6 +357,11 @@ body.admin-bar >.container #masthead #branding .branding-parent { top: 39px; }
  		}
  	}
  	body.admin-bar >.container #masthead #branding .branding-parent { top: 14px; }
+
+ 	body>.container #nav-main .nav {
+ 		padding-left: 0;
+ 		padding-right: 0;
+ 	}
  }
 
 /** 
